Fix image stretching issue

--- a/web/frontend/src/assets/css/contactPage.css
+++ b/web/frontend/src/assets/css/contactPage.css
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 100vh;
   background-image: url('../images/onbeachwithphone.jpg');
-  background-size:100% 100vh;
+  background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
   color: #fff;
